# biased-thompson-sampling

./: .gitignore  Cargo.toml  README  build.rs
config-tests/: prefer-0006.json  prefer-02-ffast.json  prefer-09-slow.json  simple-2-scripts.json  tie-over-time-01.json
ffi/: README  boost_wrapper.cc
scripts/: bandit_example.sh
src/: bts.rs  config.rs  ibeta.rs  insights.rs  thompson.rs
tests/: cli.rs
tests/lint/: bias-negative.json  bias-zero-multiple.json  bias-zero.json  limit-zero.json
