[package]
name = "biased-thompson-sampling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bts"
path = "src/bts.rs"

[dependencies]
argh = "0.1.12"
ordered-float = { version = "4.1.1", features = ["serde"] }
rand = "0.8.5"
colored = "2.0.4"
rgb = "0.8.37"
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.113"
textplots = "0.8.6"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
